fixed : changed grid-gap, function

--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -3,7 +3,7 @@
     padding: 0;
     display: grid;
     grid-template-columns: repeat(3, 282px);
-    grid-gap: 18px;
+    grid-gap: 18px 20px;
     width: 100%;
     justify-content: center;
     margin: 0;
